Fixed screen sizes and extra gaps

--- a/src/full.css
+++ b/src/full.css
@@ -209,16 +209,16 @@ nav button svg {
 }
 
 #page2 {
-  height: 100vh;
+  /*height: 100vh;*/
   width: 100%;
   background-color: #111;
   position: relative;
-  padding: 0vw 10.5vw;
-  padding-bottom: 8vw;
+  padding:0vw 10.5vw;
   display: flex;
   align-items: center;
-  border-top: 1px solid #333;
+  /*border-top: 1px solid #333;*/
   justify-content: space-between;
+  margin: 15px 0px;
 }
 
 #page2-left {
@@ -272,7 +272,7 @@ nav button svg {
 }
 
 #page3 {
-  height: 100vh;
+  height: 80vh;
   width: 100%;
   background-color: #111;
   position: relative;
